repaired all the slider; got some changes in tablet styles; some changed syntax in popup.js, slider.js; changed popup scroll lock; some cleaned main.scss.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="swiper firstSlider">
                 <div class="swiper-wrapper tech_cards sliderWrapper">
-                    <div class="swiper-slide wow firstSliderCard">
+                    <div class="swiper-slide wow firstSliderCard sliderRowCard">
                         <div class="firstGalleryImage">
                             <a href="./images/min/firstgallery1_min.jpg" class="popupTrig">
                                 <img src="./images/min/firstgallery1_min.jpg" loading="lazy">
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide wow firstSliderCard">
+                    <div class="swiper-slide wow firstSliderCard sliderRowCard">
                         <div class="firstGalleryImage">
                             <a href="./images/min/firstgallery2_min.jpg" class="popupTrig">
                                 <img src="./images/min/firstgallery2_min.jpg" loading="lazy">
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide wow firstSliderCard">
+                    <div class="swiper-slide wow firstSliderCard sliderColumnCard">
                         <div class="firstGalleryImage">
                             <a href="./images/min/firstgallery3_min.jpg" class="popupTrig">
                                 <img src="./images/min/firstgallery3_min.jpg" loading="lazy">
@@ -118,7 +118,6 @@
                 </div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
-                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
@@ -150,15 +149,21 @@
                 </div>
                 <div class="thirdSlider swiper">
                     <div class="thirdSliderWrapper swiper-wrapper">
-                        <a class="thirdSliderSlide popupTrig swiper-slide wow" href="./images/min/thirdgallery1_min.jpg">
-                            <img src="./images/min/thirdgallery1_min.jpg" loading="lazy">
-                        </a>
-                        <a class="thirdSliderSlide popupTrig swiper-slide wow" href="./images/min/thirdgallery2_min.jpg">
-                            <img src="./images/min/thirdgallery2_min.jpg" loading="lazy">
-                        </a>
-                        <a class="thirdSliderSlide popupTrig swiper-slide wow" href="./images/min/thirdgallery3_min.jpg">
-                            <img src="./images/min/thirdgallery3_min.jpg" loading="lazy">
-                        </a>
+                        <div class="thirdSliderSlide swiper-slide wow">
+                            <a class="popupTrig" href="./images/min/thirdgallery1_min.jpg">
+                                <img src="./images/min/thirdgallery1_min.jpg" loading="lazy">
+                            </a>
+                        </div>
+                        <div class="thirdSliderSlide swiper-slide wow">
+                            <a class="popupTrig" href="./images/min/thirdgallery2_min.jpg">
+                                <img src="./images/min/thirdgallery2_min.jpg" loading="lazy">
+                            </a>
+                        </div>
+                        <div class="thirdSliderSlide swiper-slide wow">
+                            <a class="popupTrig" href="./images/min/thirdgallery3_min.jpg">
+                                <img src="./images/min/thirdgallery3_min.jpg" loading="lazy">
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="thirdButton">
@@ -171,7 +176,7 @@
                     <div class="playerWrapperTextBlock animate__animated wow animate__fadeInRight">
                         <div class="playerIconWrapper">
                             <div id="playerIcon">
-                                <img src="./images/playerplay.svg">
+                                <span>.</span>
                             </div>
                         </div>
                         <div class="textContent">
