fixed slider borders; appended .swiper-lazy on all swiper slide <img>; changed width and height attr-s for all image.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span></span>
         </div>
         <div class="logo">
-            <img src="./images/logo.svg" alt="logo">
+            <img src="./images/logo.svg" width="162" height="57" alt="logo">
         </div>
     </div>
     <nav id="menuContent">
@@ -76,7 +76,7 @@
                     <div class="swiper-slide wow firstSliderCard sliderRowCard">
                         <div class="firstGalleryImage">
                             <a href="./images/min/firstgallery1_min.jpg" class="popupTrig">
-                                <img src="./images/min/firstgallery1_min.jpg" loading="lazy">
+                                <img class="swiper-lazy" src="./images/min/firstgallery1_min.jpg" width="575" height="618" loading="lazy">
                             </a>
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3FontSize">Bathroom Tiles</h3>
@@ -87,7 +87,7 @@
                     <div class="swiper-slide wow firstSliderCard sliderRowCard">
                         <div class="firstGalleryImage">
                             <a href="./images/min/firstgallery2_min.jpg" class="popupTrig">
-                                <img src="./images/min/firstgallery2_min.jpg" loading="lazy">
+                                <img class="swiper-lazy" src="./images/min/firstgallery2_min.jpg" width="339" height="618" loading="lazy">
                             </a>
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3FontSize">Marble</h3>
@@ -98,7 +98,7 @@
                     <div class="swiper-slide wow firstSliderCard sliderColumnCard">
                         <div class="firstGalleryImage">
                             <a href="./images/min/firstgallery3_min.jpg" class="popupTrig">
-                                <img src="./images/min/firstgallery3_min.jpg" loading="lazy">
+                                <img class="swiper-lazy" src="./images/min/firstgallery3_min.jpg" width="454" height="274" loading="lazy">
                             </a>
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3FontSize">Outdoor Flooring</h3>
@@ -107,7 +107,7 @@
                         </div>
                         <div class="firstGalleryImage">
                             <a href="./images/min/firstgallery4_min.jpg" class="popupTrig">
-                                <img src="./images/min/firstgallery4_min.jpg" loading="lazy">
+                                <img src="./images/min/firstgallery4_min.jpg" width="454" height="274" loading="lazy">
                             </a>
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3FontSize">Kitchen Interior</h3>
@@ -151,17 +151,17 @@
                     <div class="thirdSliderWrapper swiper-wrapper">
                         <div class="thirdSliderSlide swiper-slide wow">
                             <a class="popupTrig" href="./images/min/thirdgallery1_min.jpg">
-                                <img src="./images/min/thirdgallery1_min.jpg" loading="lazy">
+                                <img class="swiper-lazy" src="./images/min/thirdgallery1_min.jpg" width="257" height="325" loading="lazy">
                             </a>
                         </div>
                         <div class="thirdSliderSlide swiper-slide wow">
                             <a class="popupTrig" href="./images/min/thirdgallery2_min.jpg">
-                                <img src="./images/min/thirdgallery2_min.jpg" loading="lazy">
+                                <img class="swiper-lazy" src="./images/min/thirdgallery2_min.jpg" width="257" height="325" loading="lazy">
                             </a>
                         </div>
                         <div class="thirdSliderSlide swiper-slide wow">
                             <a class="popupTrig" href="./images/min/thirdgallery3_min.jpg">
-                                <img src="./images/min/thirdgallery3_min.jpg" loading="lazy">
+                                <img class="swiper-lazy" src="./images/min/thirdgallery3_min.jpg" width="257" height="325" loading="lazy">
                             </a>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                 <div class="fourthSliderWrapper swiper-wrapper">
                     <div class="fourthSlide swiper-slide wow">
                         <a class="fourthSlideImage popupTrig" href="./images/min/fourthslide1_min.jpg">
-                            <img src="./images/min/fourthslide1_min.jpg" class="swiper-lazy" loading="lazy">
+                            <img src="./images/min/fourthslide1_min.jpg" width="333" height="331" class="swiper-lazy" loading="lazy">
                         </a>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3FontSize">Kingdom Tower</h3>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="fourthSlide swiper-slide wow">
                         <a class="fourthSlideImage popupTrig" href="./images/min/fourthslide2_min.jpg">
-                            <img src="./images/min/fourthslide2_min.jpg" class="swiper-lazy" loading="lazy">
+                            <img src="./images/min/fourthslide2_min.jpg" width="333" height="333" class="swiper-lazy" loading="lazy">
                         </a>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3FontSize">Dubai Mall</h3>
@@ -227,7 +227,7 @@
                     </div>
                     <div class="fourthSlide swiper-slide wow">
                         <a class="fourthSlideImage popupTrig" href="./images/min/fourthslide3_min.jpg">
-                            <img src="./images/min/fourthslide3_min.jpg" loading="lazy">
+                            <img src="./images/min/fourthslide3_min.jpg" width="333" height="333" loading="lazy">
                         </a>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3FontSize">King Road Offices</h3>
@@ -236,7 +236,7 @@
                     </div>
                     <div class="fourthSlide swiper-slide wow">
                         <a class="fourthSlideImage popupTrig" href="./images/min/fourthslide4_min.jpg">
-                            <img src="./images/min/fourthslide4_min.jpg" loading="lazy">
+                            <img src="./images/min/fourthslide4_min.jpg" width="333" height="333" loading="lazy">
                         </a>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3FontSize">Beach Tower Alupang</h3>
@@ -262,7 +262,7 @@
             <div class="fifthCatalogue">
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod1.jpg" loading="lazy">
+                        <img src="./images/prod1.jpg" width="333" height="333" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3FontSize">Zurich Vision 60×60</h3>
@@ -271,7 +271,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/min/prod2_min.jpg" loading="lazy">
+                        <img src="./images/min/prod2_min.jpg" width="333" height="333" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3FontSize">Zurich Pearl 60×60</h3>
@@ -280,7 +280,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/min/prod3_min.jpg" loading="lazy">
+                        <img src="./images/min/prod3_min.jpg" width="333" height="333" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3FontSize">Zurich Grey 60×60</h3>
@@ -289,7 +289,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod4.jpg" loading="lazy">
+                        <img src="./images/prod4.jpg" width="333" height="333" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3FontSize">Zurich Dark Grey 60×60</h3>
@@ -298,7 +298,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod5.jpg" loading="lazy">
+                        <img src="./images/prod5.jpg" width="333" height="333" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3FontSize">Windsor White Oak</h3>
@@ -307,7 +307,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod6.jpg" loading="lazy">
+                        <img src="./images/prod6.jpg" width="333" height="333" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3FontSize">Sicily Grey Décor 30×60</h3>
@@ -316,7 +316,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod7.jpg" loading="lazy">
+                        <img src="./images/prod7.jpg" width="333" height="333" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3FontSize">Sardinia White</h3>
@@ -325,7 +325,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/min/prod8_min.jpg" loading="lazy">
+                        <img src="./images/min/prod8_min.jpg" width="333" height="333" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3FontSize">Sicily Grey 30×60</h3>
@@ -355,17 +355,17 @@
 <footer>
     <div class="contentBorder footerContent">
         <div class="footerMobileLogo">
-            <img src="./images/logolight.svg">
+            <img src="./images/logolight.svg" width="162" height="57">
         </div>
         <div class="footerColumn notCollapsible">
             <div class="footerColContent">
                 <div class="logo">
-                    <img src="./images/logolight.svg">
+                    <img src="./images/logolight.svg" width="162" height="57">
                 </div>
                 <ul class="footerContactList">
-                    <li><img class="icon" src="./images/facebookicon.svg"></li>
-                    <li><img class="icon" src="./images/twittericon.svg"></li>
-                    <li><img class="icon" src="./images/instaicon.svg"></li>
+                    <li><img class="icon" src="./images/facebookicon.svg" width="9" height="16"></li>
+                    <li><img class="icon" src="./images/twittericon.svg" width="19" height="15"></li>
+                    <li><img class="icon" src="./images/instaicon.svg" width="19" height="19"></li>
                 </ul>
             </div>
             <div class="footerCopyright">
@@ -416,9 +416,9 @@
         <hr>
         <div class="contactListWrapper">
             <ul class="footerContactList">
-                <li><img class="icon" src="./images/facebookicon.svg"></li>
-                <li><img class="icon" src="./images/twittericon.svg"></li>
-                <li><img class="icon" src="./images/instaicon.svg"></li>
+                <li><img class="icon" src="./images/facebookicon.svg" width="9" height="16"></li>
+                <li><img class="icon" src="./images/twittericon.svg" width="19" height="15"></li>
+                <li><img class="icon" src="./images/instaicon.svg" width="19" height="19"></li>
             </ul>
             <div class="mobileFooterCopyright">
                 <p>Copyright © 2022 | All Rights Reserved.</p>
